[core] fix(ControlCard): align control indicator to top (#6460)

--- a/packages/core/src/components/card/_card-variables.scss
+++ b/packages/core/src/components/card/_card-variables.scss
@@ -22,9 +22,3 @@ $card-list-item-padding: $card-list-item-padding-vertical $card-padding !default
 $card-list-item-padding-vertical-compact: 7px !default;
 $card-list-item-min-height-compact: $pt-button-height + ($card-list-item-padding-vertical-compact * 2) + $card-list-border-width !default;
 $card-list-item-padding-compact: $card-list-item-padding-vertical-compact $card-padding-compact !default;
-
-// CardList ControlCard item min-height is calculated as height of a control indicator + vertical padding
-$card-list-control-item-padding-vertical: $card-padding;
-$card-list-control-item-min-height: $control-indicator-size + ($card-list-control-item-padding-vertical * 2) + $card-list-border-width !default;
-$card-list-control-item-padding-vertical-compact: $card-padding-compact;
-$card-list-control-item-min-height-compact: $control-indicator-size + ($card-list-control-item-padding-vertical-compact * 2) + $card-list-border-width !default;
